--- a/index.html
+++ b/index.html
@@ -1,37 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="/dist/css/style.min.css" />
+    <title>Easy-bank scss</title>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Easybank landing page</title>
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <header class="header">
+      <nav class="flex flex-jc-sb flex-ai-c">
+        <a href="/" class="header__logo">
+          <img src="/images/logo.svg" alt="Easy-bank" />
+        </a>
+        <a href="#" class="header__hamburger hide-for-desktop">
+          <img src="/images/icon-hamburger.svg" alt="hamburger" />
+        </a>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+        <div class="header__links hide-for-mobile">
+          <a href="#">Home </a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+          <a href="#">Blog</a>
+          <a href="#">Careers</a>
+        </div>
+        <a class="button hide-for-mobile" type="button">Request Invite</a>
+      </nav>
+    </header>
 
-
-
-</body>
+    <script src="app/js/script.js"></script>
+  </body>
 </html>
 
-
-  <!-- Home
-  About
-  Contact
-  Blog
-  Careers
-
-  Request Invite
-
-
-
+<!-- 
+  
   Next generation digital banking
 
   Take your financial life online. Your Easybank account will be a one-stop-shop 
@@ -99,8 +123,7 @@
 
   © Easybank. All Rights Reserved-->
 
-    
-  <!-- <div class="attribution">
+<!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
