added hamburger toggle option

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         <a href="/" class="header__logo">
           <img src="/images/logo.svg" alt="Easy-bank" />
         </a>
-        <a href="#" class="header__hamburger hide-for-desktop">
-          <img src="/images/icon-hamburger.svg" alt="hamburger" />
+        <a id="header__cta" href="#" class="header__hamburger hide-for-desktop">
         </a>
 
         <div class="header__links hide-for-mobile">
