--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   </head>
   <body>
     <header class="header">
+      <div id="overlay" class="overlay hidden"></div>
       <nav class="flex flex-jc-sb flex-ai-c">
         <a href="/" class="header__logo">
           <img src="/images/logo.svg" alt="Easy-bank" />
