--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <a class="button hide-for-mobile" type="button">Request Invite</a>
       </nav>
-      <section id="headerMenu" class="snip1226 header__menu container hidden">
+      <section id="headerMenu" class="header__menu container hidden">
         <a href="#">Home </a>
         <a href="#">About</a>
         <a href="#">Contact</a>
@@ -56,54 +56,25 @@
         <a href="#">Careers</a>
       </section>
     </header>
-    <p>
-      Reference text: Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-      Officia aspernatur dolor ad, quas porro necessitatibus. Facilis impedit
-      possimus consequuntur consequatur dignissimos architecto, eveniet ut
-      quaerat atque quia voluptatem quidem, ipsum beatae porro amet cupiditate
-      provident fuga mollitia. Officia distinctio, incidunt eveniet
-      voluptatibus, ipsum dolore nesciunt nostrum iste in ab quibusdam, quae
-      animi ipsam quos mollitia. Atque quis autem ducimus ab pariatur quasi,
-      voluptatibus soluta sunt dolores cum, porro officiis consequuntur.
-      Voluptatibus blanditiis in consequuntur architecto iste ipsam. Porro ad
-      nobis hic ut magni, ullam officia suscipit dolorum, impedit labore itaque
-      repellendus cumque beatae. Eius soluta, aliquid quis sint architecto a?
-      Error, debitis! Nisi ullam odio magni ratione incidunt. Nesciunt labore
-      voluptate similique libero maiores quibusdam dolorum, quo culpa possimus
-      neque nemo, reprehenderit magni at fuga eligendi eveniet praesentium ipsa.
-      Et temporibus ratione voluptatibus, beatae expedita cupiditate esse.
-      Maxime iste quidem corporis dignissimos quo fugit distinctio temporibus
-      repellat pariatur explicabo! Temporibus necessitatibus tenetur aspernatur
-      veniam laudantium commodi officia nostrum aliquam porro doloremque labore,
-      accusantium consequatur excepturi explicabo est magnam, consectetur cumque
-      ipsum nihil! Dolorem voluptatem pariatur dolore? Quidem fugiat quasi,
-      blanditiis similique itaque ipsum deserunt delectus recusandae excepturi
-      in necessitatibus officia quae voluptatibus atque nisi debitis repellendus
-      nobis hic harum sint id eos quos a laboriosam. Sit exercitationem veniam
-      eaque quos neque totam aut expedita inventore ea iusto dolore cupiditate
-      incidunt quas impedit dolores, ex odio nesciunt quaerat unde. Aperiam
-      eaque ad vel provident nobis nihil cumque ea sint blanditiis doloremque
-      culpa impedit soluta, commodi corporis sunt ipsum illo nemo. Id fuga velit
-      sequi debitis doloremque itaque et, odio provident molestias facere neque
-      sit? Inventore sapiente consequatur error, ad in quis. Doloribus
-      laudantium, molestias voluptatem repudiandae, soluta cupiditate facere
-      labore iste reprehenderit maiores at perspiciatis error porro architecto
-      quasi, incidunt quo enim amet quae! Voluptates vel repellendus nihil rerum
-      odit? Quaerat?
-    </p>
+    <section class="hero">
+      <div class="hero__image"></div>
 
+      <div class="hero__text container">
+        <h1>Next generation digital banking!!!!</h1>
+        <p>
+          Take your financial life online. Your Easybank account will be a
+          one-stop-shop for spending, saving, budgeting, investing, and much
+          more.
+        </p>
+        <a href="#" class="button">Request Invite</a>
+      </div>
+    </section>
     <script src="app/js/script.js"></script>
   </body>
 </html>
 
 <!-- 
-  
-  Next generation digital banking
-
-  Take your financial life online. Your Easybank account will be a one-stop-shop 
-  for spending, saving, budgeting, investing, and much more.
-
-  Request Invite
+ 
 
 
 
