--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
     <header class="header">
       <div id="overlay" class="overlay hidden"></div>
-      <nav class="container flex flex-jc-sb flex-ai-c">
+      <nav class="container container--p flex flex-jc-sb flex-ai-c">
         <a href="/" class="header__logo">
           <img src="/images/logo.svg" alt="Easy-bank" />
         </a>
@@ -57,16 +57,17 @@
       </section>
     </header>
     <section class="hero">
-      <div class="hero__image"></div>
-
-      <div class="hero__text container">
-        <h1>Next generation digital banking!!!!</h1>
-        <p>
-          Take your financial life online. Your Easybank account will be a
-          one-stop-shop for spending, saving, budgeting, investing, and much
-          more.
-        </p>
-        <a href="#" class="button">Request Invite</a>
+      <div class="container">
+        <div class="hero__image"></div>
+        <div class="hero__text container--p">
+          <h1>Next generation digital banking</h1>
+          <p>
+            Take your financial life online. Your Easybank account will be a
+            one-stop-shop for spending, saving, budgeting, investing, and much
+            more.
+          </p>
+          <a href="#" class="button hero__cta">Request Invite</a>
+        </div>
       </div>
     </section>
     <script src="app/js/script.js"></script>
